console warning cleanups theming changes navigation changes

--- a/src/_metronic/_assets/sass/_config.scss
+++ b/src/_metronic/_assets/sass/_config.scss
@@ -226,7 +226,7 @@ $kt-portlet: (
 // Page padding
 $kt-page-padding: (
 	desktop: 25px,
-	mobile: 15px
+	mobile: 0
 ) !default;
 
 // Page container width
