--- a/src/_metronic/_assets/sass/global/layout/_config.scss
+++ b/src/_metronic/_assets/sass/global/layout/_config.scss
@@ -25,7 +25,7 @@ $kt-border-radius: 4px;
 // Page padding
 $kt-page-padding: (
 	desktop: 25px,
-	mobile: 15px
+	mobile: 0
 );
 
 // Page container width
